--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in Delhi.
+    Made by Samyak Jain.
   </footer>
   <script type="text/javascript" src="index.js" ></script>
 </body>
